# OOPS-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
battle/: BattleEngine.h  BattleLogger.h
entities/: Move.h  Pokemon.h  Stats.h
factory/: MoveFactory.h  PokemonFactory.h
strategy/: AIStrategy.h  AggressiveStrategy.h
trainers/: AITrainer.h  HumanTrainer.h  Trainer.h
types/: Type.h  TypeChart.h
